Fixed spacing in signup component

--- a/app/signup/signup.component.css
+++ b/app/signup/signup.component.css
@@ -9,3 +9,6 @@
 	background-color: #ffffff;
 	color:black;
 }
+.form-horizontal{
+	padding-top:50px;
+}
